@@ -16,13 +16,14 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <final.name>personium-core</final.name>
-        <java.source.version>11</java.source.version>
-        <java.target.version>11</java.target.version>
-        <jersey.version>2.29.1</jersey.version>
+        <java.source.version>17</java.source.version>
+        <java.target.version>17</java.target.version>
+        <jersey.version>2.36</jersey.version>
         <logback.version>1.2.11</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
         <httpclient.version>4.5.13</httpclient.version>
-        <jackson.version>2.12.6.1</jackson.version>
+        <jackson.version>2.13.3</jackson.version>
+        <surefire.version>2.22.2</surefire.version>
         <jacoco.include.package>io.personium.*</jacoco.include.package>
         <activemq.version>5.15.9</activemq.version>
         <kafka.version>1.1.1</kafka.version>
@@ -149,6 +150,11 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
@@ -191,7 +197,7 @@
         <dependency>
             <groupId>org.bitbucket.b_c</groupId>
             <artifactId>jose4j</artifactId>
-            <version>0.7.9</version>
+            <version>0.7.12</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -394,9 +400,23 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${surefire.version}</version>
                 <configuration>
-                    <argLine>${jacocoArgs} -Xms512m -Xmx1024m</argLine>
+                    <argLine>
+                        ${jacocoArgs} -Xms512m -Xmx512m
+                        -Djava.security.properties=./src/test/resources/java.security
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.nio.file=ALL-UNNAMED
+                        --add-opens=java.base/java.security=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.stream=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens=java.base/java.util.zip=ALL-UNNAMED
+                    </argLine>
                     <includes>
                         <include>io/personium/core/**/*Test.java</include>
                     </includes>
@@ -419,6 +439,20 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
+                    <argLine>
+                        -Djava.security.properties=./src/test/resources/java.security
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.nio.file=ALL-UNNAMED
+                        --add-opens=java.base/java.security=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.stream=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens=java.base/java.util.zip=ALL-UNNAMED
+                    </argLine>
                     <includes>
                         <include>io/personium/test/**/*Test.java</include>
                     </includes>
@@ -541,7 +575,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.3</version>
+                <version>0.8.7</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -575,7 +609,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${surefire.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
